--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <header>
     <div id="aboveHeader"></div>
     <video autoplay muted loop>
-      <source src="videos\Cold Shoulder Acoustic (Website Header).mp4" type="video/mp4">
+      <source src="videos\Take a Seat (Website Header).mp4" type="video/mp4">
     </video>
     <div id="homeImage">
       <img src="photos/Mobile Homepage Header (7.22.23).png" alt="" width="100%" height="100%">
