--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
           novalidate>
           <div id="mc_embed_signup_scroll">
             <div class="mc-field-group">
-              <label for="mce-FNAME">First Name: </label>
-              <input type="text" value="" name="FNAME" placeholder="John Doe" class="required" id="mce-FNAME">
+              <!-- <label for="mce-FNAME">First Name: </label> -->
+              <input type="text" value="" name="FNAME" placeholder="First Name" class="required" id="mce-FNAME">
             </div>
             <div class="mc-field-group">
-              <label for="mce-EMAIL">Email Address: </label>
-              <input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
+              <!-- <label for="mce-EMAIL">Email Address: </label> -->
+              <input type="email" value="" name="EMAIL" placeholder="Email Address" class="required email" id="mce-EMAIL">
             </div>
             <div id="mce-responses" class="clear">
               <div class="response" id="mce-error-response" style="display:none"></div>
               <div class="response" id="mce-success-response" style="display:none"></div>
             </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <div id="mc-embedded-sub"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
           </div>
         </form>
       </div>
