--- a/shows.html
+++ b/shows.html
@@ -136,26 +136,30 @@
     </section>
   </footer>
   <script>
-    events = [];
-    var x = "";
-    fetch('https://api.sethcharleston.com/test1/')
-      .then(function(response) {
-        return response.json();
-      })
-      .then(function(data) {
+    async function generateEvents() {
+      var x = "";
+      try {
+        const response = await fetch('https://api.sethcharleston.com/test1/');
+        const jsonResponse = await response.json();
+        console.log(jsonResponse);
+        const data = jsonResponse.Items;
         data.sort(function(a, b) {
-          adate = new Date(a.when);
-          bdate = new Date(b.when);
-          return adate > bdate ? 1 : adate < bdate ? -1 : 0;
+          a = new Date(a.when);
+          b = new Date(b.when);
+          return a < b ? -1 : a > b ? 1 : 0;
         });
         data.forEach(function(event) {
           console.log(event);
           var when = new Date(event.when);
           var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-          x += "<div class=\"events\"><h1>" + event.event + "</h1>" + "<p>" + when.toLocaleDateString("en-US", options) + "</p>" + "<p>" + event.where + "</p>" + "<p>" + event.tickets + "</p></div>";
+          x += "<div class=\"events\"><h1>" + event.name + "</h1>" + "<p>" + when.toLocaleDateString("en-US", options) + "</p>" + "<p>" + event.where + "</p>" + "<p>" + event.tickets + "</p></div>";
           document.getElementById("info").innerHTML = x;
         });
-      });
+      } catch (error) {
+        console.error("Error fetching events:", error);
+      }
+    }
+    generateEvents()
   </script>
   <script>
     function myFunction() {
