--- a/shows.html
+++ b/shows.html
@@ -64,7 +64,7 @@
       <a class="link" href="about.html">About</a>
       <a class="link" href="music.html">Music</a>
       <a class="link active" href="shows.html">Shows</a>
-      <a class="link" href="store.html">Store</a>
+      <a class="link" href="store.sethcharleston.com">Store</a>
     </div>
     <div id="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
