--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       <a class="link active" href="about.html">About</a>
       <a class="link" href="music.html">Music</a>
       <a class="link" href="shows.html">Shows</a>
-      <a class="link" href="store.sethcharlestonc.com">Store</a>
+      <a class="link" href="https://store.sethcharlestonc.com" target="_blank">Store</a>
     </div>
     <div id="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
